# semantic-segmentation-cloud-labeler

./: .gitignore  LICENSE  README.md  binding.gyp  generate_test_data.js  labels.yaml  package-lock.json  package.json  server.js
.github/workflows/: ci.yml
native/node_addon/: bindings.cpp
native/pcd_parser/: CMakeLists.txt
native/pcd_parser/include/pcd_parser/: pcd_parser.h
native/pcd_parser/src/: pcd_parser.cpp
native/pcd_parser/tests/: CMakeLists.txt  test_pcd_parser.cpp
native/src/: bindings.cpp  pcd_parser.cpp  pcd_parser.h
public/: index.html
public/css/: styles.css
public/js/: TrackballControls.js  app.js  colorizer.js  file-browser.js  folder-modal.js  labels.js  selection.js  viewer.js
sample_data/: labels2.yaml  rgb_demo.pcd  small_scene.pcd  urban_scene.pcd
